gedcomfy/tests/snapshots/tests__encodings@ansel_specified.ged-2.snap
---
source: gedcom/tests/tests.rs
description: "0 HEAD\r\n1 GEDC\r\n2 VERS 5.5.1\r\n1 CHAR ANSEL\r\n0 TEXT a ��orn in my side\r\n0 TRLR\r\n"
expression: kdl
input_file: gedcom/tests/encoding_inputs/ansel_specified.ged
---
HEAD {
    GEDC {
        VERS "5.5.1"
    }
    CHAR "ANSEL"
}
TEXT "a Þo̊rn in my side"
TRLR
