gedcomfy/tests/snapshots/tests__encodings@ansel_specified_malformed_stacked.ged.snap
---
source: gedcom/tests/tests.rs
description: "0 HEAD\r\n1 CHAR ANSEL\r\n0 SOME t��ea\r\n0 TRLR\r\n"
expression: encoding_report
input_file: gedcom/tests/encoding_inputs/ansel_specified_malformed_stacked.ged
---
No external encoding detected (ASCII-compatible)
