gedcomfy/tests/snapshots/tests__encodings@ascii_specified.ged-2.snap
---
source: gedcom/tests/tests.rs
description: "0 HEAD\r\n1 GEDC\r\n2 VERS 5.5.1\r\n1 CHAR ASCII\r\n0 TRLR\r\n"
expression: kdl
input_file: gedcom/tests/encoding_inputs/ascii_specified.ged
---
HEAD {
    GEDC {
        VERS "5.5.1"
    }
    CHAR "ASCII"
}
TRLR
