gedcomfy/tests/snapshots/tests__encodings@ascii_specified.ged.snap
---
source: gedcom/tests/tests.rs
description: "0 HEAD\r\n1 CHAR ASCII\r\n0 TRLR\r\n"
expression: encoding_report
input_file: gedcom/tests/encoding_inputs/ascii_specified.ged
---
No external encoding detected (ASCII-compatible)
