gedcomfy/tests/snapshots/tests__encodings@ascii_specified_malformed.ged.snap
---
source: gedcom/tests/tests.rs
description: "0 HEAD\r\n1 CHAR ASCII\r\n0 HÖÖT\r\n0 TRLR\r\n"
expression: encoding_report
input_file: gedcom/tests/encoding_inputs/ascii_specified_malformed.ged
---
No external encoding detected (ASCII-compatible)
